feat: create cluster, deploy calico and join nodes to master

--- a/tasks/centos.yml
+++ b/tasks/centos.yml
@@ -31,4 +31,5 @@
     name: "{{ v_kubernetes_packages }}"
     state: latest
   notify: restart kubelet
-  when: perform_action == "install"
+  when:
+    - d_perform_action == "install"
