--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -16,10 +16,12 @@
     state: latest
     update_cache: yes
   notify: restart kubelet
-  when: perform_action == "install"
+  when:
+    - d_perform_action == "install"
 
 - name: debian | hold kubernetes packages
   shell: apt-mark hold {{ item }}
   with_items:
     - "{{ v_kubernetes_packages }}"
-  when: perform_action == "install"
+  when:
+    - d_perform_action == "install"
